--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,7 @@
 
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/BandwidthHandler.js"></script>
     <script src="/app.js"></script>
 
 
